@@ -1468,6 +1468,11 @@ name|newCoreNames
 operator|.
 name|length
 decl_stmt|;
+name|DocRouter
+name|router
+init|=
+literal|null
+decl_stmt|;
 if|if
 condition|(
 name|coreContainer
@@ -1553,9 +1558,8 @@ operator|.
 name|getRange
 argument_list|()
 decl_stmt|;
-name|DocRouter
-name|hp
-init|=
+name|router
+operator|=
 name|collection
 operator|.
 name|getRouter
@@ -1571,14 +1575,14 @@ else|:
 name|DocRouter
 operator|.
 name|DEFAULT
-decl_stmt|;
+expr_stmt|;
 name|ranges
 operator|=
 name|currentRange
 operator|!=
 literal|null
 condition|?
-name|hp
+name|router
 operator|.
 name|partitionRange
 argument_list|(
@@ -1686,6 +1690,8 @@ argument_list|,
 name|newCores
 argument_list|,
 name|ranges
+argument_list|,
+name|router
 argument_list|)
 decl_stmt|;
 name|core
