@@ -238,6 +238,22 @@ name|solr
 operator|.
 name|common
 operator|.
+name|cloud
+operator|.
+name|HashBasedRouter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|util
 operator|.
 name|Hash
@@ -269,6 +285,20 @@ operator|.
 name|schema
 operator|.
 name|SchemaField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|schema
+operator|.
+name|StrField
 import|;
 end_import
 
@@ -410,6 +440,14 @@ name|SolrCore
 argument_list|>
 name|cores
 decl_stmt|;
+DECL|field|router
+name|DocRouter
+name|router
+decl_stmt|;
+DECL|field|hashRouter
+name|HashBasedRouter
+name|hashRouter
+decl_stmt|;
 DECL|field|numPieces
 name|int
 name|numPieces
@@ -465,6 +503,25 @@ operator|=
 name|cmd
 operator|.
 name|cores
+expr_stmt|;
+name|router
+operator|=
+name|cmd
+operator|.
+name|router
+expr_stmt|;
+name|hashRouter
+operator|=
+name|router
+operator|instanceof
+name|HashBasedRouter
+condition|?
+operator|(
+name|HashBasedRouter
+operator|)
+name|router
+else|:
+literal|null
 expr_stmt|;
 if|if
 condition|(
@@ -1043,6 +1100,15 @@ name|docsEnum
 init|=
 literal|null
 decl_stmt|;
+name|CharsRef
+name|idRef
+init|=
+operator|new
+name|CharsRef
+argument_list|(
+literal|100
+argument_list|)
+decl_stmt|;
 for|for
 control|(
 init|;
@@ -1064,20 +1130,9 @@ literal|null
 condition|)
 break|break;
 comment|// figure out the hash for the term
-comment|// TODO: hook in custom hashes (or store hashes)
-comment|// TODO: performance implications of using indexedToReadable?
-name|CharsRef
-name|ref
-init|=
-operator|new
-name|CharsRef
-argument_list|(
-name|term
-operator|.
-name|length
-argument_list|)
-decl_stmt|;
-name|ref
+comment|// FUTURE: if conversion to strings costs too much, we could
+comment|// specialize and use the hash function that can work over bytes.
+name|idRef
 operator|=
 name|field
 operator|.
@@ -1088,29 +1143,44 @@ name|indexedToReadable
 argument_list|(
 name|term
 argument_list|,
-name|ref
+name|idRef
 argument_list|)
 expr_stmt|;
+name|String
+name|idString
+init|=
+name|idRef
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
 name|int
 name|hash
 init|=
-name|Hash
-operator|.
-name|murmurhash3_x86_32
-argument_list|(
-name|ref
-argument_list|,
-name|ref
-operator|.
-name|offset
-argument_list|,
-name|ref
-operator|.
-name|length
-argument_list|,
 literal|0
-argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|hashRouter
+operator|!=
+literal|null
+condition|)
+block|{
+name|hash
+operator|=
+name|hashRouter
+operator|.
+name|sliceHash
+argument_list|(
+name|idString
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+comment|// int hash = Hash.murmurhash3_x86_32(ref, ref.offset, ref.length, 0);
 name|docsEnum
 operator|=
 name|termsEnum
