@@ -617,6 +617,10 @@ argument_list|,
 literal|null
 argument_list|,
 name|ranges
+argument_list|,
+operator|new
+name|PlainIdRouter
+argument_list|()
 argument_list|)
 decl_stmt|;
 operator|new
@@ -1132,6 +1136,10 @@ name|core2
 argument_list|)
 argument_list|,
 name|ranges
+argument_list|,
+operator|new
+name|PlainIdRouter
+argument_list|()
 argument_list|)
 decl_stmt|;
 operator|new
@@ -1475,6 +1483,10 @@ argument_list|,
 literal|null
 argument_list|,
 literal|null
+argument_list|,
+operator|new
+name|PlainIdRouter
+argument_list|()
 argument_list|)
 decl_stmt|;
 operator|new
